Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/FauxEnum3.out
FauxEnum3.java:10:14: compiler.err.enum.types.not.extensible
1 error
